# OZ-BE-1

./: README.md  git 실습.txt  key-pair-my_key.ppk  my-key.pem
AWS/: HW_1. Cloud, ASW.txt  HW_5. ELB.txt  HW_6. Auto Scaling.txt  hello.txt  mingee_accessKeys.csv  mingee_credentials.csv
Admin.page/: index.css  index.html  index.js
Crawling/: 24.01.26.crawling class.txt  24.01.29.crawling class.txt  Kream.py  melon.py  melon_m.py  naver_1.py  naver_2.py  naver_3.py  naver_4.py  naver_5.py  naver_6.py  selenimu.py  selenimu_1.py  selenium_2.py  selenium_3.py  selenium_4.py
Django-backend/: db.sqlite3  pyproject.toml
Django-backend/Day5/: 1.Numpy.ipynb  2.Pandas.ipynb  3.Matplotlib.ipynb
Django-backend/Day6/: 5.titanic_data.ipynb
Django-backend/boards/: admin.py  models.py
Django-backend/boards/migrations/: 0001_initial.py  0002_alter_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
Django-backend/config/: authentication.py  settings.py  urls.py
Django-backend/feeds/: models.py  serializers.py  tests.py  urls.py  views.py
Django-backend/feeds/migrations/: 0001_initial.py
Django-backend/feeds/templates/: feeds.html
Django-backend/reviews/: models.py  serializers.py  tests.py  urls.py  views.py
Django-backend/reviews/migrations/: 0001_initial.py
Django-backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
Django-backend/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
Flask-backend/oz_flask/: app.py  pyproject.toml  pysql.py  repository.py  service.py  test_article.py
(+374 files in other folders)
